--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "expo": "^31.0.2",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-otp-input": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
