--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-otp-input",
-  "version": "1.0.4",
-  "description": "Easy to use UI to input the otp. Handles lots of edge cases. Appearnace can be easily customized  ",
+  "version": "1.0.5",
+  "description": "A tiny JS library which provides an elegant UI for user to input one time passcode (OTP). It features robust checks to handle edge cases for the highly volatile user inputs. We provide default UI but you can customize the appearance as you like.",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -16,6 +16,6 @@
     "phone",
     "verification"
   ],
-  "author": "anson@TTT",
+  "author": "anson.yao@ttt.studio",
   "license": "MIT"
 }
