--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-otp-input",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "A tiny JS library which provides an elegant UI for user to input one time passcode (OTP). It features robust checks to handle edge cases for the highly volatile user inputs. We provide default UI but you can customize the appearance as you like.",
   "main": "index.js",
   "directories": {
@@ -16,6 +16,6 @@
     "phone",
     "verification"
   ],
-  "author": "anson.yao@ttt.studio",
+  "author": "Anson Yao, Felipe Pena",
   "license": "MIT"
 }
