--- a/example/app.json
+++ b/example/app.json
@@ -1,30 +1,4 @@
 {
-  "expo": {
-    "name": "PhoneVerificationView",
-    "description": "This project is really great.",
-    "slug": "phoneverificationview",
-    "privacy": "public",
-    "sdkVersion": "31.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    }
-  }
+  "name": "example",
+  "displayName": "example"
 }
