--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,15 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.4",
-    "react-native-otp-input": "^1.0.8"
+    "react-native-otp-input": "^1.0.9"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "react-test-renderer": "16.6.3",
+    "reactotron-react-native": "^2.1.5"
   },
   "jest": {
     "preset": "react-native"
