--- a/example/package.json
+++ b/example/package.json
@@ -7,9 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@twotalltotems/react-native-otp-input": "^1.0.18",
     "react": "16.6.3",
-    "react-native": "0.58.4",
-    "react-native-otp-input": "^1.0.10"
+    "react-native": "0.58.4"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
