--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "jest": {
     "preset": "react-native",
     "setupFilesAfterEnv": [
-      "jest-enzyme"
+      "<rootDir>setup-tests.js"
     ],
     "testEnvironment": "enzyme",
     "testEnvironmentOptions": {
@@ -54,6 +54,7 @@
     "jest": "^25.1.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "jsdom": "^16.1.0",
     "react": "16",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5"
