--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   ],
   "author": "TTT Studio (https://ttt.studio)",
   "contributors": [
-    "Anson Yao <yaoenxin@gmail.com> (https://github.com/ansonyao)",
+    "Becky Wu <becky.wu@ttt.studio> (https://github.com/BeckyWu220)",
     "Felipe Peña <felipe@penya.cl> (http://felipe.penya.cl)"
   ],
   "license": "MIT",
