changed outDir, added dist dir to gitignore, added types and files props for npm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "strict": true,
     "jsx": "react-native",
     "target": "es2019",
