--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@twotalltotems/react-native-otp-input",
   "version": "1.2.2",
   "description": "is a tiny JS library for one time passcode (OTP). Supports smart input suggestion on iOS and code autofill on Android (it will be filled when you press the copy button on the SMS notification bar)",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
+  "types": "./index.d.ts",
+  "files": ["./dist"],
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
