--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.25",
     "@types/react-native": "^0.61.23",
+    "@react-native-community/clipboard": "^1.2.2",
     "babel-jest": "^25.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
