#143 Use expo-clipboard for expo managed workflow

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@react-native-community/clipboard": "^1.2.2"
+    "expo-clipboard": "^1.1.0"
   },
   "prettier": {
     "printWidth": 100,
