--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   ],
   "author": "Saheem Hussain (https://github.com/saheem128)",
   "contributors": [
-    
+    "Saheem Hussain <saheem128@gmail.com> (https://github.com/saheem128)"
   ],
   "license": "MIT",
   "devDependencies": {
