--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-quick-otp",
+  "name": "react-native-simple-otp",
   "version": "1.0.0",
   "description": "is a library for react-native that just makes handling otp easy.",
   "main": "./dist/index.js",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saheem128/react-native-quick-otp.git"
+    "url": "git+https://github.com/saheem128/react-native-simple-otp.git"
   },
   "keywords": [
     "react-native",
